<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373737"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnClear"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/backspace"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toTopOf="@+id/btn5" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toTopOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toTopOf="@+id/btn8" />

    <Button
        android:id="@+id/btnNegative"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/negative"
        app:layout_constraintStart_toEndOf="@+id/btnClear"
        app:layout_constraintTop_toTopOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/multiply"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toTopOf="@+id/btn6" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="@+id/btnClear"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/percent"
        app:layout_constraintStart_toEndOf="@+id/btnNegative"
        app:layout_constraintTop_toTopOf="@+id/btnNegative" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/plus"
        app:layout_constraintStart_toEndOf="@+id/btnPercent"
        app:layout_constraintTop_toTopOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/equals"
        app:layout_constraintStart_toEndOf="@+id/btnDecimal"
        app:layout_constraintTop_toTopOf="@+id/btnDecimal" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/decimal"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toTopOf="@+id/btn0" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/btnBackspace"
        app:layout_constraintTop_toTopOf="@+id/btnBackspace" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/divide"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn3" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:layout_marginStart="17dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toTopOf="@+id/btn9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="118dp"
        android:layout_marginTop="60dp"
        android:background="#353131"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#F8F8F8"
        android:textSize="48sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>